syntax="proto3";
option csharp_namespace="GrpcDemo.Protos";

message Employee{
 int32 id=1;
 int32 no=2;
 string firstName=3;
 string lastName=4;
 float salary=5;//薪水
 repeated string happylist=6;
}

message GetByNoRequest{
 int32 no=1;
}

message EmployeeResonse{
Employee employee=1;
}

message GetAllReqeust{}

message AddPhotoRequest{
bytes data=1;
}
message AddPhotoResponse{
 bool isOk=1;
}

message EmployeeRequest{
Employee employee=1;
}

service EmployeeService{
 rpc GetByNo(GetByNoRequest) returns(EmployeeResonse);
 rpc GetAll(GetAllReqeust) returns(stream EmployeeResonse);
 rpc AddPhoto(stream AddPhotoRequest) returns(AddPhotoResponse);
 rpc Save(EmployeeRequest) returns(EmployeeResonse);
 rpc SaveAll(stream EmployeeRequest) returns(stream EmployeeResonse);
}